--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
           hx-push-url="true"
           >Hand To Hand</a
         >
+        <a
+        data-hx-post="/equipment"
+        hx-trigger="click"
+        hx-target=".page-div"
+        hx-swap="outerHTML"
+        hx-push-url="true"
+        >Equipment</a
+      >
       </div>
       {{> page}}
     </div>
