poc create character

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         hx-push-url="true"
         >Equipment</a
       >
+      <a
+      data-hx-post="/character"
+      hx-trigger="click"
+      hx-target=".page-div"
+      hx-swap="outerHTML"
+      hx-push-url="true"
+      >Character</a>
       </div>
       {{> page}}
     </div>
